--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "build-babel": "babel ./src -d ./build/src",
     "build": "npm run clean && npm run build-babel",
     "production": "npm run build && node ./build/src/server.js",
-    "dev": "nodemon --exec ./node_modules/.bin/babel-node ./src/server.js"
+    "dev": "nodemon --exec ./node_modules/.bin/babel-node ./src/server.js",
+    "db:reset": "npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all"
   },
   "author": "Duc",
   "license": "ISC",
@@ -29,6 +30,8 @@
     "@babel/node": "^7.28.0",
     "@babel/plugin-transform-runtime": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
-    "nodemon": "^3.1.11"
+    "babel-plugin-module-resolver": "^5.0.2",
+    "nodemon": "^3.1.11",
+    "sequelize-cli": "^6.6.3"
   }
 }
