--- a/backend/package.json
+++ b/backend/package.json
@@ -16,13 +16,18 @@
   "license": "ISC",
   "dependencies": {
     "@babel/runtime": "^7.28.4",
+    "bcryptjs": "^3.0.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.3",
+    "ms": "^2.1.3",
     "mysql2": "^3.15.3",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "socket.io": "^4.8.3",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.28.3",
