feat: implement SQL models and repositories for health management system
- Created health data processing consumers and producers for RabbitMQ.
- Implemented AI service for health status prediction.
- Established Socket.IO service for real-time health data and alerts.
- Updated repositories to interact with new SQL models.
- Enhanced cookie handling for refresh tokens.
- Seeded initial device data for testing.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,5 @@
 PORT=8080
+NODE_ENV=development
 
 # TiDB Cloud configuration
 DB_PORT=your-port
@@ -9,6 +10,12 @@ DB_PASSWORD=your-password
 DB_NAME=your_database_name
 DB_DIALECT=mysql
 
+# MongoDB Atlas configuration
+MONGODB_DB_NAME=your_nosql_database_name
+MONGODB_USER=your_mongodb_user
+MONGODB_PASSWORD=your_mongodb_password
+MONGODB_CLUSTER=your_mongodb_cluster
+
 # Cloudinary configuration
 CLOUDINARY_CLOUD_NAME=your_cloud_name
 CLOUDINARY_API_KEY=your_api_key
@@ -17,7 +24,27 @@ CLOUDINARY_API_SECRET=your_api_secret
 # JWT configuration
 JWT_SECRET=your-jwt-secret
 JWT_ACCESS_EXPIRE=15m
+JWT_REFRESH_SECRET=your-jwt-refresh-secret
 JWT_REFRESH_EXPIRE=7d
+
+# RabbitMQ configuration (CloudAMQP or local)
+# CloudAMQP: amqps://user:password@instance.cloudamqp.com/vhost
+# Local: amqp://localhost
+RABBITMQ_URL=amqp://localhost
+
+# MQTT configuration
+MQTT_BROKER=mqtt://broker.emqx.io
+MQTT_PORT=1883
+MQTT_TOPIC=your_mqtt_topic
+
+# Redis configuration (Upstash or local)
+# Upstash: rediss://default:password@region.upstash.io:port
+REDIS_URL=your-redis-url
+REDIS_HOST=localhost
+REDIS_PORT=6379
+
+# AI Service configuration
+AI_SERVICE_URL=http://localhost:5000
 
 # Frontend URL
 BASE_URL_FRONTEND=http://localhost:3000
