--- a/backend/package.json
+++ b/backend/package.json
@@ -17,13 +17,19 @@
   "license": "ISC",
   "dependencies": {
     "@babel/runtime": "^7.28.4",
+    "amqplib": "^0.10.9",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "http-status-codes": "^2.3.0",
+    "ioredis": "^5.9.2",
     "jsonwebtoken": "^9.0.3",
+    "mongodb": "^7.0.0",
+    "mongoose": "^9.1.4",
+    "mqtt": "^5.14.1",
     "ms": "^2.1.3",
     "mysql2": "^3.15.3",
     "sequelize": "^6.37.7",
